# term-ctrl-rust

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  lib.rs  tests.rs
.github/workflows/: test.yml
examples/: demo.rs
src/: codes.rs  lib.rs  macros.rs  predefined.rs  support.rs
tests/: tests.rs
