[package]
name = "term-ctrl"
version = "0.4.1"
authors = ["Lyndon Brown <jnqnfe@gmail.com>"]
license = "MIT/Apache-2.0"
description = """
Console/terminal control sequences
"""
keywords = ["terminal", "console"]
homepage = "https://github.com/jnqnfe/term-ctrl-rust"
repository = "https://github.com/jnqnfe/term-ctrl-rust"
publish = false

[lib]
path = "lib.rs"

[[test]]
name = "tests"
path = "tests.rs"

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2", default-features = false } #no `use_std`
