[package]
name = "term-ctrl"
version = "0.6.0"
authors = ["Lyndon Brown <jnqnfe@gmail.com>"]
license = "MIT/Apache-2.0"
description = """
ANSI terminal text formatting assistant
"""
keywords = ["terminal", "console", "ansi"]
homepage = "https://github.com/jnqnfe/term-ctrl-rust"
repository = "https://github.com/jnqnfe/term-ctrl-rust"
readme = "README.md"
edition = "2018"

[dependencies]
atty = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "consoleapi", "processenv"] }

[badges]
travis-ci = { repository = "jnqnfe/term-ctrl-rust" }
